# eegwebpype

./: .gitignore  PLAN.md  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dev-smoke.yml
apps/api/: README.md  pyproject.toml
apps/api/pype/: __init__.py  config.py  main.py
apps/api/pype/routers/: batch.py  compare.py  config.py  detector.py  epochs.py  events.py  export.py  files.py  ica.py  sessions.py  setup.py  workspace.py
apps/api/pype/schemas/: events.py  health.py  session.py
apps/api/pype/services/: bad_detector.py  batch.py  decimate.py  epochs.py  event_log.py  export.py  ica.py  mne_engine.py  montage_detect.py  sessions.py  signal_serde.py  snapshots.py  workspace.py
apps/api/tests/: conftest.py  test_bad_detector.py  test_batch.py  test_compare.py  test_decimate.py  test_endpoints.py  test_epochs.py  test_event_log.py  test_export.py  test_external_roots.py  test_filter_preview.py  test_health.py  test_ica.py  test_interp_reference.py  test_setup.py  test_signal_serde.py  test_workspace.py
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/e2e/: README.md  ica-fit.spec.mjs  screenshots.mjs
apps/web/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
apps/web/src/app/batch/: page.tsx
apps/web/src/app/compare/[subject]/: page.tsx
apps/web/src/app/session/[id]/: page.tsx
apps/web/src/components/: BadChannelsPanel.tsx  CleanupPanel.tsx  CommandPalette.tsx  EpochsPanel.tsx  EventTimeline.tsx  ExportPanel.tsx  ExternalRoots.tsx  FilterPanel.tsx  GlobalChrome.tsx  HealthCheck.tsx  ICAPanel.tsx  SetupBanner.tsx  ShortcutsOverlay.tsx  Skeleton.tsx  TimeScroller.tsx
apps/web/src/components/ui/: GlobalBusyOverlay.tsx  HoverTooltip.tsx  Modal.tsx  ResizeHandle.tsx  Select.tsx  SlideIn.tsx
apps/web/src/components/viz/: PSDPlot.tsx  ScrollPlot.tsx  Topomap.tsx
apps/web/src/lib/: busy.ts  query.tsx
apps/web/src/lib/api/: client.ts
apps/web/src/lib/hooks/: useEventLog.ts  useGlobalShortcuts.ts  useHoverIdle.ts  usePersistedState.ts
docs/screenshots/: README.md
scripts/: generate_fixture.py
